feat: add sidebar

--- a/index.html
+++ b/index.html
@@ -22,69 +22,71 @@
 
             <div id="sidebar-up">
                 <!-- logo -->
-                <a href="">
-                    <img src="" alt="">
+                <a class="hidden-sm" href="">
+                    <img id="logo" src="./img/logo.svg" alt="">
                 </a>
 
                 <!-- navigation list icons -->
-                <ul>
+                <ul id="icon-list">
                     <li>
-                        <a href=""></a>
+                        <a href=""><i class="fa-solid fa-house"></i>Home</a>
                     </li>
                     <li>
-                        <a href=""></a>
+                        <a href=""><i class="fa-solid fa-magnifying-glass"></i>Cerca</a>
                     </li>
                     <li>
-                        <a href=""></a>
+                        <a href=""><i class="fa-solid fa-lines-leaning"></i>La tua libreria</a>
                     </li>
                 </ul>
 
                 <!-- playlist list -->
-                 <h4>
+                 <h4>PLAYLIST</h4>
 
-                 </h4>
-                <ul>
+                <ul id="playlist">
                     <li>
-                        <a href=""></a>
+                        <a href=""><i class="fa-solid fa-square-plus"></i>Crea Playlist</a>
                     </li>
                     <li>
-                        <a href=""></a>
+                        <a href="">Nuova Playlist</a>
                     </li>
                     <li>
-                        <a href=""></a>
+                        <a href="">Nuova Playlist</a>
                     </li>
                     <li>
-                        <a href=""></a>
+                        <a href="">Nuova Playlist</a>
                     </li>
                     <li>
-                        <a href=""></a>
+                        <a href="">Nuova Playlist</a>
                     </li>
                     <li>
-                        <a href=""></a>
+                        <a href="">Nuova Playlist</a>
                     </li>
                     <li>
-                        <a href=""></a>
+                        <a href="">Nuova Playlist</a>
                     </li>
                     <li>
-                        <a href=""></a>
+                        <a href="">Nuova Playlist</a>
                     </li>
                 </ul>
             </div>
 
             <div id="sidebar-down">
                 <a href="">
-                    <span></span>
-                    <span></span>
+                    <span><i class="fa-solid fa-circle-down"></i></span>
+                    <span> Installa app</span>
                 </a>
                 <a href="">
-                    <span></span>
-                    <span></span>
+                    <span><i class="fa-solid fa-user"></i></span>
+                    <span id="username">John Doe</span>
                 </a>
             </div>
         </nav>
 
+
+        <!-- main content section -->
         <main>
             <div id="fix-banner">
+                <a href="">EFFETTUA L'UPGRADE</a>
 
             </div>
 
@@ -145,11 +147,10 @@
             </section>
 
         </main>
-
     </div>
 
 
-    <!-- footer/player -->
+    <!-- bottom section footer/player  -->
     <div id="footer">
         <div id="footer-left"></div>
         <div id="footer-center"></div>
