feat: add sidebar scroll fix: icon sidebar, z-index sticky banner

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <!-- navigation list icons -->
                 <ul id="icon-list">
                     <li>
-                        <a href=""><img id="home" class="icon" src="./img/home.svg" alt=""> Home</span></a>
+                        <a href=""><img id="home" class="icon" src="./img/home.svg" alt=""><span class="hidden-sm">Home</span></a>
                     </li>
                     <li>
                         <a href=""> <img class="icon" src="./img/search.svg" alt=""> <span class="hidden-sm">Cerca</span> </a>
