fix: correct html errors from validator

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="album-img">
                             <img src="./img/metal_lifting.jpg" alt="">
                             <div class="album-icon-hover">
-                                <i id="hover-icon" class="fa-regular fa-circle-play"></i>
+                                <i class="hover-icon fa-regular fa-circle-play"></i>
                             </div>
                         </div>
                         <h4 class="album-title">Heavy Metal</h4>
@@ -145,7 +145,7 @@
                         <div class="album-img">
                             <img src="./img/stranger.jpeg" alt="">
                             <div class="album-icon-hover">
-                                <i id="hover-icon" class="fa-regular fa-circle-play"></i>
+                                <i class="hover-icon fa-regular fa-circle-play"></i>
                             </div>
                         </div>
                         <h4 class="album-title">Stranger Things vol.1 (a Netflix Original Series Soundtrack)</h4>
@@ -156,7 +156,7 @@
                         <div class="album-img">
                             <img src="./img/aquietplace.jpeg" alt="">
                             <div class="album-icon-hover">
-                                <i id="hover-icon" class="fa-regular fa-circle-play"></i>
+                                <i class="hover-icon fa-regular fa-circle-play"></i>
                             </div>
                         </div>
                         <h4 class="album-title">A Quiet Place </h4>
@@ -167,7 +167,7 @@
                         <div class="album-img">
                             <img src="./img/split.jpeg" alt="">
                             <div class="album-icon-hover">
-                                <i id="hover-icon" class="fa-regular fa-circle-play"></i>
+                                <i class="hover-icon fa-regular fa-circle-play"></i>
                             </div>
                         </div>
                         <h4 class="album-title">Split</h4>
@@ -178,7 +178,7 @@
                         <div class="album-img">
                             <img src="./img/cure.jpeg" alt="">
                             <div class="album-icon-hover">
-                                <i id="hover-icon" class="fa-regular fa-circle-play"></i>
+                                <i class="hover-icon fa-regular fa-circle-play"></i>
                             </div>
                         </div>
                         <h4 class="album-title">A Cure for Wellness</h4>
@@ -189,7 +189,7 @@
                         <div class="album-img">
                             <img src="./img/sinister.jpeg" alt="">
                             <div class="album-icon-hover">
-                                <i id="hover-icon" class="fa-regular fa-circle-play"></i>
+                                <i class="hover-icon fa-regular fa-circle-play"></i>
                             </div>
                         </div>
                         <h4 class="album-title">Sinister</h4>
@@ -216,13 +216,13 @@
                         </div>
                         <h4 class="album-title">Daily Mix 1</h4>
                     </div>
+                </div>
             </section>
 
             <section id="section-3">
                 <h2 class="section-title">Creato pr John Doe</h2>
                 <h4 class="section-subtitle">Più ascolti, più accurati saranno i suggerimenti</h4>
-                <div id="section-2-wrapper">
-
+                <div id="section-3-wrapper">
                     <div class="album">
                         <div class="album-img album-img-section-3">
                             <img src="./img/youg.jpeg" alt="">
@@ -236,6 +236,7 @@
                         </div>
                         <h4 class="album-title">Daily Mix 1</h4>
                     </div>
+                </div>
             </section>
 
         </main>
